--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@react-native-community/netinfo": "6.0.0",
         "expo": "41",
         "expo-constants": "~10.1.3",
+        "expo-image-manipulator": "~9.1.0",
         "expo-image-picker": "~10.1.4",
         "expo-mail-composer": "~10.1.2",
         "expo-notifications": "~0.11.6",
         "expo-permissions": "~12.0.1",
         "expo-secure-store": "~10.1.0",
         "expo-status-bar": "~1.2.0",
+        "expo-updates": "~0.5.4",
         "react": "16.13.1",
         "react-dom": "16.13.1",
         "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
